--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,7 +1,3 @@
-html {
-  font-size: 14px;
-}
-
 @media (min-width: 768px) {
   html {
     font-size: 16px;
@@ -9,10 +5,16 @@ html {
 }
 
 html {
+  /*font-size: 20px;*/
   position: relative;
   min-height: 100%;
 }
 
 body {
-  margin-bottom: 60px;
+    font-family: Passion One;
+}
+
+footer {
+    font-family: system-ui;
+    font-size: 15px;
 }
