--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -46,4 +46,5 @@
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
+<link href="https://fonts.googleapis.com/css?family=Passion+One&display=swap" rel="stylesheet">
 </html>
