--- a/Views/SignUp/Index.cshtml
+++ b/Views/SignUp/Index.cshtml
@@ -12,54 +12,43 @@
         <div class="col">
             <br />
             <h1 class="welcome-title">Welcome, new user.</h1>
-            <asp:form class="form-control" 
+            <form class="form-control" 
                 style="background-color:#D9D9D9; width: 584px; height: 540px; border-radius: 30px; position relative;" 
-                asp-controller="SignUp" 
+                asp-controller="SignUp"
                 asp-action="CreateUser"
-            >
+                method="post">
                 <br />
                 <div class="form-group username-group ">
-                    <label asp-for="Username" CssClass="input-label">Username</label>
-                    <input type="text" class="form-control input-full" placeholder="Username">
+                    <label for="Username" class="input-label">Username</label>
+                    <input type="text" class="form-control input-full" placeholder="Username" required>
                     <br />
-
                 </div>
                 <div class="form-group email-group">
-                    <label asp-for="Email" class="input-label">E-mail</label>
-                    <input type="email" class="form-control input-full" aria-describedby="emailHelp" placeholder="E-mail">
+                    <label for="Email" class="input-label">E-mail</label>
+                    <input type="email" class="form-control input-full" aria-describedby="emailHelp" placeholder="E-mail" required>
                     <br />
 
                 </div>
                 <div class="form-group password-group row">
                     <div class="col">
-                        <label asp-for="Password" class="input-label">Password</label>
-                        <input type="password" class="form-control input-half" placeholder="Password">
+                        <label for="password" class="input-label">Password</label>
+                        <input for="password" type="password" id="password-input" class="form-control input-half" placeholder="Password" required>
                     </div>
                     <div class="col">
                         <label for="password-confirm" class="input-label">Confirm Password</label>
-                        <input type="password" class="form-control input-half" placeholder="Confirm Password" required>
+                        <input for="password-confirm" type="password" id="confirm-password-input" class="form-control input-half" placeholder="Confirm Password" required>
+                        <div id="err-mess" class="invalid-feedback"></div>
                     </div>
-                    @*@{
-                        string Password = ViewData["Password"].ToString();
-                        string ConfirmPassword = ViewData["password-confirm"].ToString();
-
-                        if (!Password.Equals(ConfirmPassword)) {
-                            <div class="invalid-feedback">
-                                Passwords do not match.
-                            </div>
-                        }
-                    }*@
-
                 </div>
                 <div class="form-group submit-group">
                     <br />
                     <br />
-                    <button type="submit" class="btn submit-btn">Register</button>
+                    <button type="submit" onclick="confirmPassword()" class="btn submit-btn">Register</button>
                     <br />
 
                     <a href="Login/Index" class="login-redirect">Already have an account? Login here</a>
                 </div>
-            </asp:form>
+            </form>
         </div>
     </div>
 </div>
