refactoring file system to follow MVC structure standards

--- a/Views/Login/Index.cshtml
+++ b/Views/Login/Index.cshtml
@@ -33,7 +33,7 @@
                 <br/>
             </form>
             <br/>
-            <p style="padding-right:60px">New to ReadIT ?<a href="Inscription/index"> Sign-up here</a></p>
+            <p style="padding-right:60px">New to ReadIT ?<a href="SignUp/Index"> Sign-up here</a></p>
         </div>
 
 
@@ -43,7 +43,7 @@
 
 
     <div style="text-align:right" name="image">
-        <img src="/images/Login/undraw_Bookshelves_re_lxoy.png" />
+        <img src="images/undraw_bookshelves_re_lxoy.svg" />
     </div>
 
 
