--- a/Views/SignUp/Index.cshtml
+++ b/Views/SignUp/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model Readit.Models.User
+﻿@model Readit.Models.Entities.User
 
 @{
     ViewData["Title"] = "Sign Up";
@@ -6,7 +6,7 @@
 <div class="container">
     <div class="row">
         <div class="col img-container">
-            <img class="sign-walk-img" src="sign-walk.svg" />
+            <img class="sign-walk-img" src="images/sign-walk.svg" />
         </div>
 
         <div class="col">
