--- a/Views/Login/Index.cshtml.css
+++ b/Views/Login/Index.cshtml.css
@@ -16,8 +16,8 @@
     font-family: Passion One;
     text-align: left;
     font-size: 32px;
-    letter-spacing: 0;
-    line-height: px;
+    letter-spacing: 0px;
+    line-height: 0px;
 }
 
 .ei1_59_1_36 {
