inital Branch push
initial Branch publication

--- a/Views/Shared/Login.cshtml
+++ b/Views/Shared/Login.cshtml
@@ -33,7 +33,7 @@
                 <br/>
             </form>
             <br/>
-            <p style="padding-right:60px">New to ReadIT ?<a href="Inscription/index"> Sign-up here</a></p>
+            <p style="padding-right:60px">New to ReadIT ?<a style="font-family:Passion one" href="Inscription/index"> Sign-up here</a></p>
         </div>
 
 
