debug log 1: fixed links between pages.

--- a/Views/Login/Index.cshtml
+++ b/Views/Login/Index.cshtml
@@ -33,7 +33,7 @@
                 <br/>
             </form>
             <br/>
-            <p style="padding-right:60px">New to ReadIT ?<a href="SignUp/Index"> Sign-up here</a></p>
+            <p class="signup-redirect" style="padding-right:60px"><a asp-controller="SignUp" asp-action="Index">New to ReadIT? Sign-up here</a></p>
         </div>
 
 
@@ -43,7 +43,7 @@
 
 
     <div style="text-align:right" name="image">
-        <img src="images/undraw_bookshelves_re_lxoy.svg" />
+        <img src="/images/undraw_bookshelves_re_lxoy.svg" />
     </div>
 
 
