--- a/Views/Login/Index.cshtml
+++ b/Views/Login/Index.cshtml
@@ -11,14 +11,22 @@
         <br/>
         <h1 class="Comingback">Coming back?</h1>
         <div class="e1_74">
-        <form  name="LoginForm" action="/login/data" method="get">
+        <form  name="LoginForm" action="/login/Login" method="get">
                 <br/>
+                @if(ViewBag.Alert!=null){
+                    <script type="text/javascript"> 
+                        window.onload=function(){
+                            alert("@ViewBag.Alert");
+                        };
+                        </script>
+                }
+                
                 <br/>
                 <div style="text-align:center" name="inputs">
                 <div style="padding-left:60px"  class="e1_59">
-                <label class="ei1_59_1_7" for="username">Username</label>
+                <label class="ei1_59_1_7" for="Email">Email</label>
                 <br/>
-                <input type="text" name="username" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
+                <input type="text" name="Email" class="form-control" placeholder="Email" aria-label="Email" aria-describedby="basic-addon1">
                 </div>
                 <br/>
                 <div style="padding-left:60px" class="e1_59">
@@ -33,7 +41,7 @@
                 <br/>
             </form>
             <br/>
-            <p style="padding-right:60px">New to ReadIT ?<a style="font-family:Passion one" href="Inscription/index"> Sign-up here</a></p>
+            <p style="padding-right:60px">New to ReadIT ?<a style="font-family:Passion one" href="Inscription"> Sign-up here</a></p>
         </div>
 
 
