--- a/Views/SignUp/Index.cshtml
+++ b/Views/SignUp/Index.cshtml
@@ -14,7 +14,7 @@
             <h1 class="welcome-title">Welcome, new user.</h1>
             <form class="form-control needs-validation" 
                 style="background-color:#D9D9D9; width: 584px; height: 540px; border-radius: 30px; position relative;" 
-                asp-controller="SignUp"
+                asp-controller="/SignUp"
                 asp-action="CreateMember"
                 method="post">
                 <br />
