--- a/Views/Login/Index.cshtml
+++ b/Views/Login/Index.cshtml
@@ -41,7 +41,7 @@
                 <br/>
             </form>
             <br/>
-            <p style="padding-right:60px">New to ReadIT ?<a style="font-family:Passion one" href="Inscription"> Sign-up here</a></p>
+            <p style="padding-right:60px">New to ReadIT ?<a style="font-family:Passion one" href="Signup/Index"> Sign-up here</a></p>
         </div>
 
 
