--- a/Views/Login/Index.cshtml
+++ b/Views/Login/Index.cshtml
@@ -3,6 +3,7 @@
 *@
 @{
     ViewData["Title"] = "Login Page";
+    Layout = "~/Views/Shared/_UnLoggedLayout.cshtml";
 }
 <div style="text-align:left" class="grid-container">
 
