--- a/Views/SignUp/Index.cshtml.css
+++ b/Views/SignUp/Index.cshtml.css
@@ -42,7 +42,7 @@
 
 .login-redirect {
     display:block;
-    font-family: Tahoma;
+    font-family: Passion one;
     font-size: 14px;
     color: #4E4D4D;
     text-decoration: none;
