--- a/Views/Login/Index.cshtml
+++ b/Views/Login/Index.cshtml
@@ -42,7 +42,7 @@
                 <br />
             </form>
             <br/>
-            <p style="padding-right:60px">New to ReadIT ?<a style="font-family:Passion one" href="Signup/Index"> Sign-up here</a></p>
+            <p style="padding-right:60px">New to ReadIT ?<a style="font-family:Passion one" asp-controller="SignUp" asp-action="Index"> Sign-up here</a></p>
 
         </div>
 
