--- a/Views/SignUp/Index.cshtml
+++ b/Views/SignUp/Index.cshtml
@@ -46,7 +46,7 @@
                     <button type="submit" onclick="confirmPassword()" class="btn submit-btn">Register</button>
                     <br />
 
-                    <p class="login-redirect">Already have an account?<a href="Login/Index" > Login here</a></p>
+                    <p class="login-redirect">Already have an account?<a asp-controller="Login" asp-action="Index" > Login here</a></p>
                 </div>
             </form>
         </div>
