--- a/Views/Shared/_LinkPartial.cshtml
+++ b/Views/Shared/_LinkPartial.cshtml
@@ -10,9 +10,19 @@
         border: 2px solid;
         border-radius: 8px;
         padding: 5px;
+        width:750px;
 }
 </style>
 <div class="Link">
-    <span> <h1 style="display:inline;">@Model.Title <h3 style="display:inline; padding-left:500px "> @Model.PublicationDate     Published by: @Model.Member.Username</h3> </h1></span>
+    <h1 style="display:inline;">@Model.Title  </h1><p style="display:inline; "> @Model.PublicationDate     Published by: @Model.Member.Username</p>
+    
+    @if ((int)ViewData["user"] == Model.MemberId)
+    {
+        <svg style="display:inline;float:right;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-circle-fill" viewBox="0 0 16 16">
+            <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM5.354 4.646a.5.5 0 1 0-.708.708L7.293 8l-2.647 2.646a.5.5 0 0 0 .708.708L8 8.707l2.646 2.647a.5.5 0 0 0 .708-.708L8.707 8l2.647-2.646a.5.5 0 0 0-.708-.708L8 7.293 5.354 4.646z"/>
+    </svg>
+    }
+
+ 
     <p>@Model.Description</p>
 </div>
