profile component half-done, my links component not started

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -26,10 +26,10 @@
                             <a style="font-family:Passion One" class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item"> 
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="ViewProfile">Profile</a>
+                            <a class="nav-link text-dark" asp-controller="Profile" asp-action="ProfileView">Profile</a>
                         </li>
                         <li class="nav-item" >
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Logout">Logout</a>
+                            <a class="nav-link text-dark" asp-controller="Home" asp-action="Logout">Logout</a>
                         </li>
                     </ul>
                 </div>
