--- a/Views/Home/AjoutLien.cshtml
+++ b/Views/Home/AjoutLien.cshtml
@@ -6,7 +6,7 @@
 <form asp-action="AjouterUnLien">
     <label for="Title" >Title</label>
     <br/>
-    <input type="text" name="Title" id="Title" />
+    <input type="text" name="Title" id="Title" maxlength="20" /><p class="text-muted" style="opacity:0.80;color:dimgrey;display:inline;">*maximum 20</p>
     <br/>
     <label for="Description" > Description </label>
     <br />
