--- a/Views/Shared/_LinkPartial.cshtml
+++ b/Views/Shared/_LinkPartial.cshtml
@@ -5,24 +5,25 @@
 *@
 @{
 }
-<style>
-.Link{
-        border: 2px solid;
-        border-radius: 8px;
-        padding: 5px;
-        width:750px;
-}
-</style>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
 <div class="Link">
-    <h1 style="display:inline;">@Model.Title  </h1><p style="display:inline; "> @Model.PublicationDate     Published by: @Model.Member.Username</p>
+    <a style="text-decoration:none;color:black;" asp-action="ViewLink" asp-controller="Home" asp-route-id="@Model.Id"><h1  style="display:inline;">@Model.Title  </h1></a><p style="display:inline; "> @Model.PublicationDate     Published by: @Model.Member.Username</p>
     
     @if ((int)ViewData["user"] == Model.MemberId)
     {
-        <svg style="display:inline;float:right;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-circle-fill" viewBox="0 0 16 16">
-            <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM5.354 4.646a.5.5 0 1 0-.708.708L7.293 8l-2.647 2.646a.5.5 0 0 0 .708.708L8 8.707l2.646 2.647a.5.5 0 0 0 .708-.708L8.707 8l2.647-2.646a.5.5 0 0 0-.708-.708L8 7.293 5.354 4.646z"/>
-    </svg>
+        <a style="text-decoration:none; color:black;" asp-route-Id="@Model.Id" asp-action="delete" asp-controller="Home">
+            <i class="bi bi-x-circle-fill" style="display:inline;float:right"></i>
+        </a>
     }
 
  
-    <p>@Model.Description</p>
+    <p style="word-break:break-all;">@Model.Description</p>
+    
+   <p style="float:right;"> @Model.Comments.Count()
+
+        <i class="bi bi-chat"></i>
+   </p>
+
+    
+
 </div>
