--- a/Views/Shared/_Profile.cshtml
+++ b/Views/Shared/_Profile.cshtml
@@ -3,16 +3,29 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
 <div class="card user-card">
     <div class="card-body">
-        <h5 class="card-title">Hello, @Model.Username.</h5>
+        <h5 class="card-title">Hello, @Model.Username.ToUpper().</h5>
         <h6 class="card-subtitle mb-2 text-muted">@Model.Email</h6>
-        <div>
-            <span class="stats"><p>@ViewData["CommentCount"]</p></span>
-            <i class="bi bi-chat icon stats"></i>
-            <span class="stats"><p>@ViewData["PostCount"]</p></span>
-            <i class="bi bi-sticky icon stats"></i>
-            <span class="stats"><p>@ViewData["LikesCount"]</p></span>
-            <i class="bi bi-hand-thumbs-up icon stats"></i>
+        <div class="stats-container">
+            <div class="stats-group comment-group">
+                <span class="stats">@ViewData["CommentCount"]</span>
+                <i class="bi bi-chat icon stats"></i>
+            </div>
+
+            <div class="stats-group post-group">
+                <span class="stats">@ViewData["PostCount"]</span>
+                <i class="bi bi-sticky icon stats"></i>
+            </div>
+
+            <div class="stats-group likes-group">
+                <span class="stats">@ViewData["LikesCount"]</span>
+                <i class="bi bi-hand-thumbs-up icon stats"></i>
+            </div>
         </div>
+        <br/>
+        <br/>
+        <br/>
         <a href="" class="btn btn-primary">Edit</a>
+        <br/>
+        <br/>
     </div>
 </div>
