added profile editing feature

--- a/Views/Shared/_Profile.cshtml
+++ b/Views/Shared/_Profile.cshtml
@@ -24,7 +24,7 @@
         <br/>
         <br/>
         <br/>
-        <a href="" class="btn btn-primary">Edit</a>
+        <a asp-controller="Profile" asp-action="EditProfile" type="button" class="btn btn-primary">Edit</a>
         <br/>
         <br/>
     </div>
