--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -28,7 +28,11 @@
                         <li class="nav-item"> 
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="ViewProfile">Profile</a>
                         </li>
-                        <li class="nav-item" >
+                    </ul>
+                </div>
+                <div>
+                    <ul class="navbar-nav flex-grow-1">
+                        <li class="nav-item" style="float:right;">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Logout">Logout</a>
                         </li>
                     </ul>
