--- a/Views/Shared/_LinkPartial.cshtml
+++ b/Views/Shared/_LinkPartial.cshtml
@@ -7,6 +7,25 @@
 }
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
 <div class="Link">
+    @{
+        bool upVotedorDownVoted = false;
+        int personId = (int)ViewData["user"];
+        Vote vote = null;
+        foreach(var item in Model.Votes){
+            if (item.MemberId ==personId){
+                if(item.IsUpVote==1){
+                    upVotedorDownVoted = true;
+                    vote = item;
+                    break;
+                }else{
+                    break;
+                }
+            }
+        }
+    }
+    
+    
+    
     <a style="text-decoration:none;color:black;" asp-action="ViewLink" asp-controller="Home" asp-route-id="@Model.Id"><h1  style="display:inline;">@Model.Title  </h1></a><p style="display:inline; "> @Model.PublicationDate     Published by: @Model.Member.Username</p>
     
     @if ((int)ViewData["user"] == Model.MemberId)
@@ -18,7 +37,38 @@
 
  
     <p style="word-break:break-all;">@Model.Description</p>
-    
+   <p style="float:right">
+       @Model.Votes.Where(w=>w.IsUpVote==0).Count()  
+       @if(upVotedorDownVoted==false && vote!=null){
+            <i class="bi bi-hand-thumbs-down-fill"></i>
+       }else{
+            if (upVotedorDownVoted == true && vote!=null){
+                <a asp-action="ThumbsUpdate" asp-controller="Home" asp-route-LinkId="@Model.Id" asp-route-MemberId="@personId" asp-route-updown="0"> <i class="bi bi-hand-thumbs-down"></i></a>
+            }else{
+                <a asp-action="Thumbs" asp-controller="Home" asp-route-LinkId="@Model.Id" asp-route-MemberId="@personId" asp-route-updown="0"> <i class="bi bi-hand-thumbs-down"></i></a>
+            }
+           
+       }
+       
+
+   </p>
+    <p style="float:right;">
+        @Model.Votes.Where(w=>w.IsUpVote==1).Count() 
+        
+        @if (upVotedorDownVoted == true && vote != null)
+        {
+            <i class="bi bi-hand-thumbs-up-fill"></i>
+        }
+        else
+        {
+            if(upVotedorDownVoted==false){
+                <a asp-action="ThumbsUpdate" asp-controller="Home" asp-route-LinkId="@Model.Id" asp-route-MemberId="@personId" asp-route-updown="1"> <i class="bi bi-hand-thumbs-up"></i></a>
+            }else{
+                <a asp-action="Thumbs" asp-controller="Home" asp-route-LinkId="@Model.Id" asp-route-MemberId="@personId" asp-route-updown="1"> <i class="bi bi-hand-thumbs-up"></i></a>
+            }
+           
+        }
+    </p>
    <p style="float:right;"> @Model.Comments.Count()
 
         <i class="bi bi-chat"></i>
