Fixed image positionning
Image in the Profile page is now at it's desired position.

--- a/Views/Profile/ProfileView.cshtml
+++ b/Views/Profile/ProfileView.cshtml
@@ -7,7 +7,7 @@
 }
 <div class="container">
     <div class="row">
-        <div class="col-sm">
+        <div class="col-sm" style="max-width:300px">
             <h2>jjj</h2>
             <h2>jjj</h2>
             <h2>jjj</h2>
