--- a/Views/Shared/_Profile.cshtml
+++ b/Views/Shared/_Profile.cshtml
@@ -4,10 +4,6 @@
 
 <h1 class="links-title">My Links</h1>
 
-<div class="img-container">
-    <img class="reading-time-img" src="~/images/reading_time.svg" />
-</div>
-
 <div class="card user-card">
     <div class="card-body">
         <h5 class="card-title">Hello, @Model.Username.ToUpper().</h5>
@@ -35,4 +31,7 @@
         <br/>
         <br/>
     </div>
+</div>
+<div class="img-container">
+    <img src="~/images/reading_time.svg" b-hi7zulfpfw />
 </div>
