--- a/Views/Shared/_Comment.cshtml
+++ b/Views/Shared/_Comment.cshtml
@@ -5,12 +5,19 @@
 *@
 
 <div class="d-flex justify-content-center">
-    <div class="rounded card text-white" style="width:80rem">
-        <div class="card-body bg-secondary">
+    <div class="text-white" style="width:80rem">
+        <div class="carte card-body bg-secondary">
             <h6 class="float-end">Date de publication: @Model.PublicationDate</h6>
             <h4 class="card-subtitle">&nbsp;&nbsp;&nbsp;&nbsp; @Model.Member.Username</h4>
             <p class="card-title">@Model.Content</p>
         </div>
     </div>
 </div>
-<br />
+
+<style>
+    .carte{
+        border: 2px solid;
+        border-radius: 8px;
+        margin-bottom: 5px;
+    }
+</style>
