--- a/Views/Shared/_Profile.cshtml
+++ b/Views/Shared/_Profile.cshtml
@@ -5,7 +5,7 @@
 <h1 class="links-title">My Links</h1>
 
 <div class="card user-card">
-    <div class="card-body">
+    <div class="card-body user-card-body">
         <h5 class="card-title">Hello, @Model.Username.ToUpper().</h5>
         <h6 class="card-subtitle mb-2 text-muted">@Model.Email</h6>
         <div class="stats-container">
