--- a/Views/Shared/_Profile.cshtml.css
+++ b/Views/Shared/_Profile.cshtml.css
@@ -2,14 +2,17 @@
     width: 18rem;
     height: 30rem;
     float: initial;
-    z-index: 1;
+    z-index: 2;
     position:relative;
 }
 
-.icon{
-    width:16px;
-    height:16px;
-    fill:currentColor
+.user-card-body{
+}
+
+.icon {
+    width: 16px;
+    height: 16px;
+    fill: currentColor
 }
 
 .stats-container {
@@ -47,9 +50,10 @@
 .img-container > img {
     position: absolute !important;
     top: -500px !important;
+    left: 60px;
     height: 554px;
     width: 734px;
-    z-index: 2;
+    z-index: 1;
 }
 
 .img-container{
