--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
 <div class="row">
 
     <div class="column img-container-left">
-        <img style="width:250px;height:700px;" src="~/images/social-guy.svg" />
+        <img style="width:250px;height:700px;" src="~/images/undraw_social_boy.png" />
     </div>
 
     <div class="column" style="width:780px;">
@@ -21,8 +21,8 @@
         </div>
     </div>
 
-    <div class="column img-container-right" style="float:right;width:250px;height:700px;">
-        <img style="width:250px;height:700px;" src="~/images/social-girl.svg" />
+    <div class="column img-container-right">
+        <img style="width:250px;height:700px;" src="~/images/undraw_Social_girl.png" />
     </div>
 
 </div>
