imported max's publish link component

--- a/Views/Home/Create.cshtml
+++ b/Views/Home/Create.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Create Link";
 }
 
 <div class="d-flex justify-content-center bg-secondary" style="height:40vh">
