--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="~/readit.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Passion+One"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Passion+One&display=swap">
+
 </head>
 <body>
     <header>
@@ -53,5 +55,4 @@
         </div>
     </footer>
 </body>
-<link href="https://fonts.googleapis.com/css?family=Passion+One&display=swap" rel="stylesheet">
 </html>
