--- a/Views/Shared/_LinkPartial.cshtml
+++ b/Views/Shared/_LinkPartial.cshtml
@@ -7,72 +7,74 @@
 }
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
 <div class="Link">
-    @{
-        bool upVotedorDownVoted = false;
-        int personId = (int)ViewData["user"];
-        Vote vote = null;
-        foreach (var item in Model.Votes) {
-            if (item.MemberId == personId) {
-                if (item.IsUpVote is true) {
-                    upVotedorDownVoted = true;
-                    vote = item;
-                    break;
+    <a asp-action="ViewLink" asp-controller="Home" asp-route-id="@Model.Id" style="text-decoration:none;color:black;">
+        <h1>@Model.Title</h1>
+        @{
+            bool upVotedorDownVoted = false;
+            int personId = (int)ViewData["user"];
+            Vote vote = null;
+            foreach (var item in Model.Votes) {
+                if (item.MemberId == personId) {
+                    if (item.IsUpVote is true) {
+                        upVotedorDownVoted = true;
+                        vote = item;
+                        break;
+                    }
+                    else {
+                        break;
+                    }
+                }
+            }
+        }
+
+        @if ((int)ViewData["user"] == Model.MemberId) {
+            <a style="text-decoration:none; color:black;" asp-route-Id="@Model.Id" asp-action="delete" asp-controller="Home">
+                <i class="bi bi-x-circle-fill" style="display:inline;float:right"></i>
+            </a>
+        }
+        <h6>Published by: @Model.Member.Username</h6>
+        <h6 class="text-muted"> @Model.PublicationDate</h6>
+        &nbsp;
+
+
+        <p style="word-break:break-all;">@Model.Description</p>
+        <p style="float:right">
+            @Model.Votes.Where(w => w.IsUpVote is false).Count()
+            @if (upVotedorDownVoted == false && vote != null) {
+                <i class="bi bi-hand-thumbs-down-fill"></i>
+            }
+            else {
+                if (upVotedorDownVoted == true && vote != null) {
+                    <a asp-action="ThumbsUpdate" asp-controller="Home" asp-route-LinkId="@Model.Id" asp-route-MemberId="@personId" asp-route-updown="0"> <i class="bi bi-hand-thumbs-down"></i></a>
                 }
                 else {
-                    break;
+                    <a asp-action="Thumbs" asp-controller="Home" asp-route-LinkId="@Model.Id" asp-route-MemberId="@personId" asp-route-updown="0"> <i class="bi bi-hand-thumbs-down"></i></a>
                 }
+
             }
-        }
-    }
 
 
+        </p>
+        <p style="float:right;">
+            @Model.Votes.Where(w => w.IsUpVote is true).Count()
 
-    <a style="text-decoration:none;color:black;" asp-action="ViewLink" asp-controller="Home" asp-route-id="@Model.Id"><h1 style="display:inline;">@Model.Title  </h1></a><p style="display:inline; "> @Model.PublicationDate     Published by: @Model.Member.Username</p>
-
-    @if ((int)ViewData["user"] == Model.MemberId) {
-        <a style="text-decoration:none; color:black;" asp-route-Id="@Model.Id" asp-action="delete" asp-controller="Home">
-            <i class="bi bi-x-circle-fill" style="display:inline;float:right"></i>
-        </a>
-    }
-
-
-    <p style="word-break:break-all;">@Model.Description</p>
-    <p style="float:right">
-        @Model.Votes.Where(w => w.IsUpVote is false).Count()
-        @if (upVotedorDownVoted == false && vote != null) {
-            <i class="bi bi-hand-thumbs-down-fill"></i>
-        }
-        else {
-            if (upVotedorDownVoted == true && vote != null) {
-                <a asp-action="ThumbsUpdate" asp-controller="Home" asp-route-LinkId="@Model.Id" asp-route-MemberId="@personId" asp-route-updown="0"> <i class="bi bi-hand-thumbs-down"></i></a>
+            @if (upVotedorDownVoted == true && vote != null) {
+                <i class="bi bi-hand-thumbs-up-fill"></i>
             }
             else {
-                <a asp-action="Thumbs" asp-controller="Home" asp-route-LinkId="@Model.Id" asp-route-MemberId="@personId" asp-route-updown="0"> <i class="bi bi-hand-thumbs-down"></i></a>
+                if (upVotedorDownVoted == false) {
+                    <a asp-action="ThumbsUpdate" asp-controller="Home" asp-route-LinkId="@Model.Id" asp-route-MemberId="@personId" asp-route-updown="1"> <i class="bi bi-hand-thumbs-up"></i></a>
+                }
+                else {
+                    <a asp-action="Thumbs" asp-controller="Home" asp-route-LinkId="@Model.Id" asp-route-MemberId="@personId" asp-route-updown="1"> <i class="bi bi-hand-thumbs-up"></i></a>
+                }
+
             }
+        </p>
+        <p style="float:right;">
+            @Model.Comments.Count()
 
-        }
-
-
-    </p>
-    <p style="float:right;">
-        @Model.Votes.Where(w => w.IsUpVote is true).Count()
-
-        @if (upVotedorDownVoted == true && vote != null) {
-            <i class="bi bi-hand-thumbs-up-fill"></i>
-        }
-        else {
-            if (upVotedorDownVoted == false) {
-                <a asp-action="ThumbsUpdate" asp-controller="Home" asp-route-LinkId="@Model.Id" asp-route-MemberId="@personId" asp-route-updown="1"> <i class="bi bi-hand-thumbs-up"></i></a>
-            }
-            else {
-                <a asp-action="Thumbs" asp-controller="Home" asp-route-LinkId="@Model.Id" asp-route-MemberId="@personId" asp-route-updown="1"> <i class="bi bi-hand-thumbs-up"></i></a>
-            }
-
-        }
-    </p>
-    <p style="float:right;">
-        @Model.Comments.Count()
-
-        <i class="bi bi-chat"></i>
-    </p>
+            <i class="bi bi-chat"></i>
+        </p>
+    </a>
 </div>
